# plutus-apps

./: cabal.project  default.nix  flake.nix  shell.nix
certification/: CHANGELOG.md  certification.cabal
certification/src/: Certification.hs
nix/pkgs/: default.nix
nix/pkgs/haskell/: haskell.nix
nix/pkgs/haskell/materialized-darwin/.plan.nix/: plutus-use-cases.nix
nix/pkgs/haskell/materialized-linux/: default.nix
nix/pkgs/haskell/materialized-linux/.plan.nix/: plutus-contract-certification.nix
nix/pkgs/haskell/materialized-windows/: default.nix
playground-common/src/PSGenerator/: Common.hs
plutus-contract/: plutus-contract.cabal
plutus-contract-certification/: plutus-contract-certification.cabal
plutus-contract-certification/src/Plutus/Contract/Test/: Certification.hs
plutus-contract/src/Plutus/Contract/Test/: Certification.hs  ContractModel.hs  Coverage.hs
plutus-pab-executables/demo/pab-nami/client/: default.nix
plutus-pab-executables/tx-inject/: Main.hs
plutus-pab/src/Cardano/ChainIndex/: Server.hs
plutus-pab/src/Cardano/Node/: Client.hs  Server.hs
plutus-pab/src/Cardano/Protocol/Socket/Mock/: Client.hs
plutus-pab/src/Cardano/Wallet/Mock/: Handlers.hs  Server.hs
plutus-pab/src/Plutus/PAB/: App.hs
plutus-playground-client/: default.nix  package.json
plutus-use-cases/: plutus-use-cases.cabal
plutus-use-cases/src/Plutus/Contracts/Tutorial/: Endpoints.hs  Spec.hs
plutus-use-cases/src/Plutus/Contracts/Uniswap/: Endpoints.hs  Spec.hs
plutus-use-cases/test/: Spec.hs
plutus-use-cases/test/Spec/: GameStateMachine.hs  Uniswap.hs
(+3 files in other folders)
