cabal-version:      2.4
name:               certification
version:            0.1.0.0
author:             Shea Levy
maintainer:         shea@shealevy.com
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Certification
  build-depends:
    , base
    , plutus-contract-certification
    , plutus-use-cases

  hs-source-dirs:   src
  default-language: Haskell2010
